--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   
   "type": "module",
+  
   "dependencies": {
-    "express": "^4.21.2",
-    "redis": "^4.7.0",
-    "socket.io": "^4.8.1"
+  
+    
+  "express": "^4.21.2",
+  
+    
+  "ioredis": "^5.6.0",
+  
+    
+  "redis": "^4.7.0",
+  
+    
+  "socket.io": "^4.8.1"
+  
   }
 }
