--- a/package.json
+++ b/package.json
@@ -14,10 +14,22 @@
   "nanoid": "^5.1.5",
   
     
+  "nodemon": "^3.1.9",
+  
+    
   "redis": "^4.7.0",
   
     
-  "socket.io": "^4.8.1"
+  "socket.io": "^4.8.1",
+  
+    
+  "socket.io-client": "^4.8.1",
+  
+    
+  "ws": "^8.18.1",
+  
+    
+  "wscat": "^6.0.1"
   
   }
 }
