--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
   "socket.io": "^4.8.1",
   
     
-  "socket.io-client": "^4.8.1",
-  
-    
   "ws": "^8.18.1",
   
     
   "wscat": "^6.0.1"
+  
+  },
+  
+  "devDependencies": {
+  
+    
+  "jest": "^29.7.0",
+  
+    
+  "socket.io-client": "^4.8.1"
   
   }
 }
