--- a/package.json
+++ b/package.json
@@ -1,42 +1,31 @@
 {
-  
   "type": "module",
-  
   "dependencies": {
-  
-    
-  "express": "^4.21.2",
-  
-    
-  "ioredis": "^5.6.0",
-  
-    
-  "nanoid": "^5.1.5",
-  
-    
-  "nodemon": "^3.1.9",
-  
-    
-  "redis": "^4.7.0",
-  
-    
-  "socket.io": "^4.8.1",
-  
-    
-  "ws": "^8.18.1",
-  
-    
-  "wscat": "^6.0.1"
-  
+    "express": "^4.21.2",
+    "ioredis": "^5.6.0",
+    "nanoid": "^5.1.5",
+    "nodemon": "^3.1.9",
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.1",
+    "wscat": "^6.0.1"
   },
-  
   "devDependencies": {
-  
-    
-  "jest": "^29.7.0",
-  
-    
-  "socket.io-client": "^4.8.1"
-  
-  }
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "socket.io-client": "^4.8.1"
+  },
+  "jest": {
+  "testEnvironment": "node",
+  "testMatch": ["**/tests/**/*.test.js"],
+  "transform": {
+    "^.+\\.js$": "babel-jest"
+  },
+  "transformIgnorePatterns": [
+    "node_modules/(?!nanoid|socket.io-client)"
+  ],
+  "moduleFileExtensions": ["js", "json", "node"]
+}
 }
